style: fix z-index

--- a/frontend/css/brainzplayer.less
+++ b/frontend/css/brainzplayer.less
@@ -423,7 +423,7 @@
 
 .music-player {
   position: fixed;
-  z-index: 9997;
+  z-index: 108;
   height: 100vh;
   width: 100%;
   display: flex;
